--- a/index.html
+++ b/index.html
@@ -146,5 +146,13 @@
                 </button>
             </div>
         </main>
+        <div class="d-flex justify-content-center border px-2 fixed-bottom">
+            Site criado e hospedado por &nbsp;
+            <a
+                href="https://github.com/Vanortton"
+                target="_blank"
+                >Vanorton</a
+            >
+        </div>
     </body>
 </html>
