--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
                 <button
                     class="btn btn-dark w-100 mt-3"
                     id="btn-qrcode-link"
+                    style="display: none;"
+                    onclick="downloadQRCode()"
+                 >
+                    BAIXAR QRCODE
+                </button>
+                <button
+                    class="btn btn-dark w-100 mt-3"
+                    id="btn-qrcode-link"
                     onclick="createQRCode(document.querySelector('#type-link input').value)"
                 >
                     GERAR QRCODE DE LINK
