--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </div>
                 <button
                     class="btn btn-dark w-100 mt-3"
-                    id="btn-qrcode-link"
+                    id="download"
                     style="display: none;"
                     onclick="downloadQRCode()"
                  >
