--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
                     />
                 </div>
                 <div
-                    id="qrcode"
                     class="d-flex p-3 w-100 justify-content-center border rounded mt-3"
                 >
-                    <h3>Seu resultado vai aparecer aqui...</h3>
+                    <canvas id="qrcode"></canvas>
                 </div>
                 <button
                     class="btn btn-dark w-100 mt-3"
